# pico-wifi-rtos-post-get

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  main.c
main_api/: CMakeLists.txt  main.c
main_get/: CMakeLists.txt  main.c
main_post/: CMakeLists.txt
main_webserver/: README.md  main.c
python/: main.py
